// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Button with Button.Icon 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="button"
  style={
    [
      {
        "alignSelf": "flex-start",
      },
      undefined,
    ]
  }
  testID="button"
>
  <View
    collapsable={false}
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(0, 0, 0, 1)",
          "borderColor": "rgba(0, 0, 0, 0)",
        },
      }
    }
    style={
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "rgba(0, 0, 0, 1)",
        "borderColor": "rgba(0, 0, 0, 0)",
        "borderRadius": 100,
        "borderStyle": "solid",
        "borderWidth": 0,
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "center",
        "paddingHorizontal": 20,
        "paddingVertical": 12,
      }
    }
    testID="button-visual"
  >
    <View
      onLayout={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 12,
          "justifyContent": "center",
        }
      }
    >
      <Text>
        <Text
          collapsable={false}
          jestAnimatedStyle={
            {
              "value": {
                "color": "rgba(255, 255, 255, 1)",
              },
            }
          }
          style={
            {
              "color": "rgba(255, 255, 255, 1)",
            }
          }
        >
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "fontFamily": "Icons_Outline_DEFAULT_odido",
                  "fontSize": 24,
                  "lineHeight": 24,
                  "width": 24,
                },
                [
                  {
                    "display": "flex",
                  },
                  false,
                ],
              ]
            }
            testID="base-button-icon"
          >
            
          </Text>
        </Text>
      </Text>
      <Text
        collapsable={false}
        jestAnimatedStyle={
          {
            "value": {
              "color": "rgba(255, 255, 255, 1)",
            },
          }
        }
        style={
          {
            "color": "rgba(255, 255, 255, 1)",
            "display": "flex",
            "fontFamily": "odido_Paragraph_Strong",
            "fontSize": 18,
            "gap": 12,
            "letterSpacing": 0.27000001072883606,
            "lineHeight": 24,
          }
        }
      >
        Test
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders all boolean functions on button 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="button"
  style={
    [
      {},
      undefined,
    ]
  }
  testID="button"
>
  <View
    collapsable={false}
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(255, 255, 255, 1)",
          "borderColor": "rgba(0, 0, 0, 0)",
        },
      }
    }
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderColor": "rgba(0, 0, 0, 0)",
        "borderRadius": 100,
        "borderStyle": "solid",
        "borderWidth": 0,
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "center",
        "paddingHorizontal": 20,
        "paddingVertical": 12,
      }
    }
    testID="button-visual"
  >
    <View
      onLayout={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 12,
          "justifyContent": "center",
        }
      }
    >
      <Text
        collapsable={false}
        jestAnimatedStyle={
          {
            "value": {
              "color": "rgba(0, 0, 0, 1)",
            },
          }
        }
        style={
          {
            "color": "rgba(0, 0, 0, 1)",
            "display": "flex",
            "fontFamily": "odido_Paragraph_Strong",
            "fontSize": 18,
            "gap": 12,
            "letterSpacing": 0.27000001072883606,
            "lineHeight": 24,
          }
        }
      >
        Test
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders emphasised large button 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="button"
  style={
    [
      {
        "alignSelf": "flex-start",
      },
      undefined,
    ]
  }
  testID="button"
>
  <View
    collapsable={false}
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(27, 94, 228, 1)",
          "borderColor": "rgba(0, 0, 0, 0)",
        },
      }
    }
    style={
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "rgba(27, 94, 228, 1)",
        "borderColor": "rgba(0, 0, 0, 0)",
        "borderRadius": 100,
        "borderStyle": "solid",
        "borderWidth": 0,
        "flexDirection": "row",
        "gap": 16,
        "justifyContent": "center",
        "paddingHorizontal": 24,
        "paddingVertical": 20,
      }
    }
    testID="button-visual"
  >
    <View
      onLayout={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 16,
          "justifyContent": "center",
        }
      }
    >
      <Text
        collapsable={false}
        jestAnimatedStyle={
          {
            "value": {
              "color": "rgba(255, 255, 255, 1)",
            },
          }
        }
        style={
          {
            "color": "rgba(255, 255, 255, 1)",
            "display": "flex",
            "fontFamily": "odido_Paragraph_Strong",
            "fontSize": 20,
            "gap": 16,
            "letterSpacing": 0.20000000298023224,
            "lineHeight": 24,
          }
        }
      >
        Test
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders most default button 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="button"
  style={
    [
      {
        "alignSelf": "flex-start",
      },
      undefined,
    ]
  }
  testID="button"
>
  <View
    collapsable={false}
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(0, 0, 0, 1)",
          "borderColor": "rgba(0, 0, 0, 0)",
        },
      }
    }
    style={
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "rgba(0, 0, 0, 1)",
        "borderColor": "rgba(0, 0, 0, 0)",
        "borderRadius": 100,
        "borderStyle": "solid",
        "borderWidth": 0,
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "center",
        "paddingHorizontal": 20,
        "paddingVertical": 12,
      }
    }
    testID="button-visual"
  >
    <View
      onLayout={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 12,
          "justifyContent": "center",
        }
      }
    >
      <Text
        collapsable={false}
        jestAnimatedStyle={
          {
            "value": {
              "color": "rgba(255, 255, 255, 1)",
            },
          }
        }
        style={
          {
            "color": "rgba(255, 255, 255, 1)",
            "display": "flex",
            "fontFamily": "odido_Paragraph_Strong",
            "fontSize": 18,
            "gap": 12,
            "letterSpacing": 0.27000001072883606,
            "lineHeight": 24,
          }
        }
      >
        Test
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders secondary small button 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="button"
  style={
    [
      {
        "alignSelf": "flex-start",
      },
      undefined,
    ]
  }
  testID="button"
>
  <View
    collapsable={false}
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(0, 0, 0, 0)",
          "borderColor": "rgba(0, 0, 0, 1)",
        },
      }
    }
    style={
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "rgba(0, 0, 0, 0)",
        "borderColor": "rgba(0, 0, 0, 1)",
        "borderRadius": 100,
        "borderStyle": "solid",
        "borderWidth": 2,
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "center",
        "paddingHorizontal": 14,
        "paddingVertical": 6,
      }
    }
    testID="button-visual"
  >
    <View
      onLayout={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "center",
        }
      }
    >
      <Text
        collapsable={false}
        jestAnimatedStyle={
          {
            "value": {
              "color": "rgba(0, 0, 0, 1)",
            },
          }
        }
        style={
          {
            "color": "rgba(0, 0, 0, 1)",
            "display": "flex",
            "fontFamily": "odido_Paragraph_Strong",
            "fontSize": 14,
            "gap": 8,
            "letterSpacing": 0.20999999344348907,
            "lineHeight": 16,
          }
        }
      >
        Test
      </Text>
    </View>
  </View>
</View>
`;
